# aloeschema

./: .gitignore  .technoproj  Makefile  README.md  pyproject.toml  quickstart.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: main.yml  publish.yml
script/: precommit-py.sh  pydocgen.py
src/: __init__.py  constant.py  error.py  validator.py
src/data/: __init__.py  schemaorg_current.py
test/: unit_tests.py
