[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="aloeschema"
version = "0.2.3"
description="Aloeschema is a simple schema.org accessor and validator that allows custom types and properties"
authors = [{email = "michael@aloecraft.org"}]
maintainers = [{email = "michael@aloecraft.org"}]
readme = "README.md"
license = "apache-2.0"
requires-python = ">=3.11"

dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/Aloecraft-org/aloeschema"
Repository = "https://github.com/Aloecraft-org/aloeschema"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose" # Example options for verbose output and coverage
testpaths = [
    "test",
]

[tool.setuptools]
package-dir = { "aloeschema" = "src" }
packages = ["aloeschema"]